@@ -5,6 +5,11 @@ Changelog
 1.3.2 (unreleased)
 ------------------
 
+- Deprecate @javascript because Selenium with PhantomJS is too unstable.
+  Removes tests and documentation, the @javascript decorator still works
+  for now but needs to be imported from ftw.testing.browser.
+  [jone]
+
 - Page objects: add a Plone.visit(obj) function.
   [jone]
 
